--- a/core/templates/include/sidebar.html
+++ b/core/templates/include/sidebar.html
@@ -65,7 +65,9 @@
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}" data-bs-toggle="modal" data-bs-target="#renewModal"><i class="fas fa-bed me-2"></i>
                         Rooms</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_appointments' %}" data-bs-toggle="modal" data-bs-target="#renewModal"><i class="far fa-calendar-check me-2"></i>
-                        Appointments</a></li>                        
+                        Appointments</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_chat_list' %}" data-bs-toggle="modal" data-bs-target="#renewModal"><i class="far fa-comments me-2"></i>
+                        Chats</a></li>                        
                 {% else %}
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="fa-solid fa-bed"></i></i>
                     Rooms</a></li>
