--- a/core/templates/seller/seller_appointments.html
+++ b/core/templates/seller/seller_appointments.html
@@ -13,6 +13,7 @@
             <li><a class="dropdown-item" href="?filter=requests">Appointment Requests</a></li>
             <li><a class="dropdown-item" href="?filter=pending">Pending Appointments</a></li>
             <li><a class="dropdown-item" href="?filter=finished">Completed Appointments</a></li>
+            <li><a class="dropdown-item" href="?filter=rejected">Reject Appointments</a></li>
             <li><a class="dropdown-item" href="?filter=canceled">Canceled Appointments</a></li>
         </ul>
     </div>
@@ -29,6 +30,7 @@
             <table class="table table-hover border-2">
                 <thead class="table-head">
                     <tr class="border-2">
+                        <th>Room</th>
                         <th>Client</th>
                         <th>Phone</th>
                         <th>Date</th>
@@ -40,6 +42,7 @@
                     {% if appointment_requests%}
                     {% for appointment in appointment_requests %}
                     <tr class="border-2">
+                        <td>{{ appointment.room.title }}</td>
                         <td>{{appointment.customer.name|upper}}</td>
                         <td>{{ appointment.customer.phone }}</td>
                         <td>{{ appointment.date }}</td>
@@ -187,6 +190,46 @@
                     <tr>
                         <td colspan="5" class="text-center">
                             <p class="text-muted">You have not Finished any Appointments Yet</p>
+                        </td>
+                    </tr>
+                    {% endif %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    {% endif %}
+    </div>
+
+    <!-- Reject Appoinment -->
+    {% if filter_option == "rejected" %}
+    <div class="my-4">
+        <h4 class="Listed-Rooms-header fw-bold fs-3">Rejected Appoinments</h4>
+        <div class="table-responsive border shadow">
+            <table class="table table-hover border-2">
+                <thead class="table-head">
+                    <tr class="border-2">
+                        <th>Client</th>
+                        <th>Phone</th>
+                        <th>Date</th>
+                        <th>Time</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% if rejected_appointments %}
+                    {% for appointment in rejected_appointments %}
+                    <tr class="border-2">
+                        <td>{{appointment.customer.name|upper}}</td>
+                        <td>{{appointment.customer.phone}}</td>
+                        <td>{{appointment.date}}</td>
+                        <td>{{appointment.date}}</td>
+                        <td class="text-danger">{{appointment.status|upper}}</td>
+                    </tr>
+                    {% endfor %}
+                    {% else %}
+                    <tr>
+                        <td colspan="5" class="text-center">
+                            <p class="text-muted">You have not Reject any Appointments Yet</p>
                         </td>
                     </tr>
                     {% endif %}
