--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -79,6 +79,9 @@
                                 <p class="text-muted">Don't have an account? 
                                     <a href="{% url 'choose_registration' %}" class="theme-text fw-bold text-decoration-none">Sign Up</a>
                                 </p>
+                                <p class="text-muted">Admin Login
+                                    <a href="http://127.0.0.1:8000/admin/login/?next=/admin/" class="theme-text fw-bold text-decoration-none">Click here</a>
+                                </p>
                                 <p class="text-muted mt-2">
                                     <a href="{% url 'homepage' %}" class="theme-text fw-bold text-decoration-none">Back to Home</a>
                                 </p>
