--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,8 @@
     <title>Set New Password | Room Rental</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+
     <style>
         :root {
             --primary-color: #2A3855;
@@ -110,6 +113,7 @@
             text-align: center;
             margin-bottom: 1.5rem;
         }
+
         
         @media (max-width: 575.98px) {
             .password-reset-body {
@@ -143,6 +147,7 @@
                                    id="{{ field.id_for_label }}" 
                                    name="{{ field.html_name }}" 
                                    required>
+    
                             
                             {% if field.errors %}
                                 <div class="error-message">
@@ -177,6 +182,7 @@
         </div>
     </div>
 
+    <script src="{% static 'js/eye.js' %}"></script>
     <!-- Bootstrap 5 JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
