--- a/core/templates/core/customer_profile.html
+++ b/core/templates/core/customer_profile.html
@@ -179,11 +179,6 @@
                             placeholder="Enter name">
                     </div>
                     <div class="col-md-6">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" name="email" value="{{user.email}}" id="email"
-                            placeholder="Enter email">
-                    </div>
-                    <div class="col-md-6">
                         <label for="city" class="form-label">City</label>
                         <select class="form-select" name="city" id="city">
                             <option value="{{user.city}}" disabled selected>{{user.city}}</option>
@@ -196,6 +191,11 @@
                         <label for="phone" class="form-label">Phone Number</label>
                         <input type="tel" class="form-control" value="{{user.phone}}" name="phone" id="phone"
                             placeholder="Enter phone number">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" name="password" id="password"
+                        placeholder="Leave empty to keep current password">
                     </div>
                 </div>
             </div>
